--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" href="/src/assets/favicon.svg" />
-    <title>Vite App</title>
+    <link rel="shortcut icon" href="/头像圆.webp" />
+    <title>黎想</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript><h1>老老实实给我开 js</h1></noscript>
     <div id="root"></div>
     <script src="/src/index.tsx" type="module"></script>
   </body>
