--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" href="/头像圆.webp" />
+    <link rel="shortcut icon" href="/src/assets/头像圆.webp" />
     <title>黎想</title>
   </head>
   <body>
