--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" href="/src/assets/头像圆.webp" />
-    <title>黎想</title>
+    <title>北雁云依</title>
   </head>
   <body>
     <noscript><h1>老老实实给我开 js</h1></noscript>
